# aesl

./: .env  .gitignore  :w  README.md  back.html  build.sh  build_files.sh  data.json  db.sqlite3  deploy.sh  manage.py  pyproject.toml  requirements.txt  vercel.json
aesl/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: admin.py  models.py  urls.py  views.py
frontend/migrations/: 0001_initial.py  0002_project_location_alter_project_certificate_and_more.py  0003_alter_project_certificate_alter_project_job_sheets_and_more.py  0004_projectaward.py  0005_projectteammember_project_other_team_members.py  0006_contractorrole_projectcontractor.py  0007_maincategory_subcategory_staff.py  0008_staff_region.py  0009_person.py  0010_person_department.py  0011_publications.py  0012_alter_projectimage_image_type.py  0013_boardmember.py  0014_remove_boardmember_image_boardmember_position.py  0015_boardmember_image.py  0016_alter_project_total_floor_area_alter_staff_region.py  0017_people_delete_person.py  0018_publications_publication_image.py  0019_galleryimage.py  0020_rename_galleryimage_projectgalleryimage_and_more.py  0021_alter_projectgalleryimage_options_and_more.py  0022_alter_projectgalleryimage_image.py  0023_alter_projectgalleryimage_alt_text.py  0024_alter_boardmember_options_and_more.py  0025_rename_grade_staff_position_staff_profession.py  0026_remove_people_department_remove_people_facebook_and_more.py  0027_people_category.py  0028_people_department.py  0029_alter_people_department_alter_people_position_and_more.py  0031_branch.py  (+14 more)
templates/: 404.html  base.html
(+92 files in other folders)
