[project]
name = "aesl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0",
    "django-browser-reload==1.21.0",
    "gunicorn==23.0.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "sqlparse==0.5.4",
    "whitenoise==6.11.0",
]
